--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -4,11 +4,11 @@
   <span class="caption">start time:</span> {{view Sysys.DateTimePickerField  valBinding="start_time" }} ({{ dateFromNow start_time}})
     <span class="caption">duration: </span> {{view Sysys.DurationField valueBinding="duration"}} -->
 description:
-{{view Sysys.HumonNodeView contentBinding="description"}}
+{{view Sysys.HumonNodeView contextBinding="description" contentBinding="description"}}
 start_time:
-{{view Sysys.HumonNodeView contentBinding="start_time"}}
+{{view Sysys.HumonNodeView contextBinding="start_time" contentBinding="start_time"}}
 end_time:
-{{view Sysys.HumonNodeView contentBinding="end_time"}}
+{{view Sysys.HumonNodeView contextBinding="end_time" contentBinding="end_time"}}
 
 <span class="caption">details: </span>
 {{!!view Sysys.HumonNodeView contentBinding="detail"}}
