refactor DetailController and ActController; ActController now extends DetailController and all the Act-only logic is added in there (commitAct; setTransaction; move the abstract humon node chain set up logic from ActiveAct route to actController.observe content; add Ember.run.sync to HNV.didInsertElement to correct for case when the root detail (hnv) is created via render detail; fixed styling -- no more collection wrapper div

--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -7,7 +7,7 @@
     loading...
   </div>
   {{else}}
-    {{#each act in arrangedContent itemController=detail}}
+    {{#each act in arrangedContent itemController=act}}
       {{! partial "act" }}
       {{view Sysys.ActView contentBinding="act"}}
       {{!render "act" act}}
