--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -3,15 +3,9 @@
   <!--span class="caption">start time: </span> {{! dateFormat start_time format="MMM D h:mm a"}} ({{! dateFromNow start_time}}) ||  {{!start_time}} <br>
   <span class="caption">start time:</span> {{!view Sysys.DateTimePickerField  valBinding="start_time" }} ({{! dateFromNow start_time}})
     <span class="caption">duration: </span> {{!view Sysys.DurationField valueBinding="duration"}} -->
-description:
 {{view Sysys.HumonNodeView nodeContentBinding="description"}}
-start_time:
-{{view Sysys.HumonNodeView nodeContentBinding="start_time"}} contextBinding="start_time" contentBinding="start_time"
-end_time:
-{{view Sysys.HumonNodeView nodeContentBinding="end_time"}} contextBinding="end_time" contentBinding="end_time"
-
-<span class="caption">details: </span>
-{{!!view Sysys.HumonNodeView contentBinding="detail"}}
+{{view Sysys.HumonNodeView nodeContentBinding="start_time"}}
+{{view Sysys.HumonNodeView nodeContentBinding="end_time"}}
 {{render "detail" detail}}
 
 
