--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -92,6 +92,10 @@ textarea.content-field:focus {
   box-shadow: none;
 }
 
+textarea.content-field.dirty {
+  border-right: 1px solid red;
+}
+
 textarea.content-field.val-field {
   min-width: 100px;
 }
@@ -111,7 +115,7 @@ textarea.content-field.val-field.big-val-field.editing {
   border-left: $nodeLeftBorder $activeColorLight solid;
   padding: 2px;
   padding-left: $fieldWhiteIndent*2;
-  // left: $fieldWhiteIndent + $fieldWhiteIndent 
+  // left: $fieldWhiteIndent + $fieldWhiteIndent
 }
 .node-item-collection-wrapper.editing {
   display: none;
