reenabling remove autogrow shadow; a lot more printing in focusing in / focusing out, move the setting of the active humon node from contentField#focusIn to hnv#focusIn's call to ctrl.activateNode; add many assertion unsupported guards; basically stopped using autogrow / removeautogrow assertions because of chrome bug that causes focus out to be called twice

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -95,6 +95,9 @@ textarea.content-field:focus {
 textarea.content-field.dirty {
   border-right: 1px solid red;
 }
+textarea.content-field.autogrowing {
+  border-left: 1px solid blue;
+}
 
 textarea.content-field.val-field {
   min-width: 100px;
