remove ProxyField view from humon_node.hbs, update hnv#click; it works gs

--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -8,7 +8,7 @@
   {{#if view.nodeContent.isLiteral}}
     {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
   {{else}}
-    <span class="open-glyph"> </span>{{view "Sysys.ProxyField" }}
+    <span class="open-glyph"> </span> {{!view "Sysys.ProxyField" }}
   {{/if}}
 </span>
 
