HNV: dynamic tmeplate binding works:: ad autoTemplateName computed property; put in a schedule for @rerender

--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -6,6 +6,9 @@
   {{/if}}
 
     DATE:: {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
+    tplName:: {{view.templateName}} | {{view.nodeContent.nodeType}} |
+
+
 </span>
 
 <span class="buffer"></span>
