ran test for templateStrings, seems to work

--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -6,9 +6,7 @@
   {{/if}}
 
     DATE:: {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
-    tplName:: {{view.templateName}} | {{view.nodeContent.nodeType}} |
-
-
+    tN:: {{view.templateName}} | {{view.nodeContent.nodeType}} |  month:: {{view.templateStrings.month}} |
 </span>
 
 <span class="buffer"></span>
