clean up code: remove editable field; act_old; act_meta_old; reinstate HNV#templateStrings as a property; extract humon_date out into its ow nfile

--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -5,8 +5,12 @@
     {{view "Sysys.KeyField" rawValueBinding="view.nodeContent.nodeKey"}}<span class="colon-glyph">:</span>
   {{/if}}
 
-    DATE:: {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
-    tN:: {{view.templateName}} | {{view.nodeContent.nodeType}} |  month:: {{view.templateStrings.month}} |
+    {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
+    ( {{view.templateStrings.asString}} )
+    | {{view.nodeContent.nodeType}}
+    | month:: {{view.templateStrings.month}}
+    | day:: {{view.templateStrings.day}} |
+
 </span>
 
 <span class="buffer"></span>
