--- a/app/assets/javascripts/templates/humon_node.hbs
+++ b/app/assets/javascripts/templates/humon_node.hbs
@@ -1,12 +1,15 @@
+{{!
+humon_node_view.hbs
+}}
 <span class="blocky">
   {{#if view.nodeContent.nodeParent.isList}}
     {{view "Sysys.IdxField" valueBinding="view.nodeContent.nodeIdx" rawValueBinding="view.nodeContent.nodeIdx"}}
   {{else}}
-    {{view "Sysys.KeyField" rawValueBinding="view.nodeContent.nodeKey"}}<span class="colon-glyph">:</span>
+    {{view "Sysys.KeyField" rawValueBinding=view.nodeContent.nodeKey}}<span class="colon-glyph">:</span>
   {{/if}}
  | {{view.nodeContent.nodeType}} |
   {{#if view.nodeContent.isLiteral}}
-    {{view "Sysys.ValField" rawValueBinding="view.nodeContent.json" }}
+    {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
   {{else}}
     <span class="open-glyph"> </span> {{!view "Sysys.ProxyField" }}
   {{/if}}
