update styling for humon_date.hbs

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -61,6 +61,7 @@ span.blocky {
   text-decoration: underline;
 }
 .node.active > span.blocky> span.node-detail {
+  font-style: italic;
   display: inline;
 }
 span.node-detail {
