--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -9,6 +9,7 @@
     ({{ view.templateStrings.relative }})
     <span class="node-detail">
       {{view.templateStrings.verbose}}
+      |{{view.nodeContent.nodeType}}|
     </span>
 
 </span>
