add font-awesome; include initial icon tests

--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -10,7 +10,7 @@ humon_node_view.hbs
 
   {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
   <span class="node-detail">
-    |{{view.nodeContent.nodeType}}|
+    |{{view.nodeContent.nodeType}}| <i class="icon-camera-retro"></i>
   </span>
 </span>
 <span class="buffer"></span>
