--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.slider";
+@import "font-awesome";
 //
 // @import "vendor/jquery-ui-1.9.2.custom";
 //# pp/assets/javascripts/vendor/jquery-ui-1.9.2.custom/css/ui-lightness
