major rehaul of templateString system. See dev log for details. Summary: HNV#templateStrings now calls a helper _materializeTemplateStringsForNode; type registrations can now pass in a templateStrings argument directly, which will extend defaults properly. lazy evaluation is supported via passingi n a function

--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -9,7 +9,7 @@
     ({{ view.templateStrings.relative }})
     <span class="node-detail">
       {{view.templateStrings.verbose}}
-      |{{view.nodeContent.nodeType}}|
+      |{{view.nodeContent.nodeType}}| {{partial humon_icon}}
     </span>
 
 </span>
