--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -1,18 +1,17 @@
+{{!
+humon_node_date.hbs
+}}
 <span class="blocky">
-  {{#if view.nodeContent.nodeParent.isList}}
-    {{view "Sysys.IdxField" valueBinding="view.nodeContent.nodeIdx" rawValueBinding="view.nodeContent.nodeIdx"}}
-  {{else}}
-    {{view "Sysys.KeyField" rawValueBinding="view.nodeContent.nodeKey"}}<span class="colon-glyph">:</span>
-  {{/if}}
+  {{partial humon_key_index_field}}
 
     {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
     ({{ view.templateStrings.relative }})
+
     <span class="node-detail">
       {{view.templateStrings.verbose}}
-      |{{view.nodeContent.nodeType}}| {{partial humon_icon}}
+      {{partial humon_icon}}
     </span>
 
 </span>
 
-<span class="buffer"></span>
 <span class="close-glyph"></span>
