--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -1,17 +1,12 @@
 {{!
-humon_node_view.hbs
+humon_node_literal.hbs
 }}
 <span class="blocky">
-  {{#if view.nodeContent.nodeParent.isList}}
-    {{view "Sysys.IdxField" valueBinding="view.nodeContent.nodeIdx" rawValueBinding="view.nodeContent.nodeIdx"}}
-  {{else}}
-    {{view "Sysys.KeyField" rawValueBinding=view.nodeContent.nodeKey}}<span class="colon-glyph">:</span>
-  {{/if}}
+  {{partial humon_key_index_field}}
 
   {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
   <span class="node-detail">
-    |{{view.nodeContent.nodeType}}| {{partial humon_icon}}
+    {{partial humon_icon}}
   </span>
 </span>
-<span class="buffer"></span>
 <span class="close-glyph"></span>
