update styling on humon icon placement

--- a/app/assets/javascripts/templates/_humon_icon.hbs
+++ b/app/assets/javascripts/templates/_humon_icon.hbs
@@ -1,2 +1,1 @@
-|<i class="icon {{unbound view.templateStrings.iconClass}}" ></i>|
-
+<i class="icon {{unbound view.templateStrings.iconClass}}" ></i>
