--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -4,12 +4,14 @@ humon_node_date.hbs
 <span class="blocky">
   {{partial humon_key_index_field}}
 
+    <span class="node-detail node-icon">
+      {{partial humon_icon}}
+    </span>
     {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
     ({{ view.templateStrings.relative }})
 
     <span class="node-detail">
       {{view.templateStrings.verbose}}
-      {{partial humon_icon}}
     </span>
 
 </span>
