running tests on view.append

--- a/app/assets/javascripts/templates/details.hbs
+++ b/app/assets/javascripts/templates/details.hbs
@@ -1,3 +1,4 @@
+walawala
 {{#if view.hovered}}
 <div class="detailsbar">
   <a {{action edit target="view" href="true"}} class="details-edit"> [edit] </a>
