--- a/app/assets/javascripts/templates/act.hbs
+++ b/app/assets/javascripts/templates/act.hbs
@@ -1,7 +1,11 @@
 {{view Sysys.HumonNodeView nodeContentBinding="description"}}
 {{view Sysys.HumonNodeView nodeContentBinding="start_time"}}
 {{view Sysys.HumonNodeView nodeContentBinding="end_time"}}
+zug
+{{detail}}
+detail
 {{render "detail" detail}}
+zug
 
 
 {{#if isDirty}}
@@ -10,3 +14,7 @@
 <a {{action commitAct}} class="btn btn-primary"> save? </a>
 </div>
 {{/if}}
+
+
+========zugggggggg====
+{{render "test"}}
