convert detail controller, hnv, content field to use send instead of direct calls to controller. some bugs still exist; see dev log

--- a/app/assets/javascripts/templates/components/humon-editor.hbs
+++ b/app/assets/javascripts/templates/components/humon-editor.hbs
@@ -1,3 +1,4 @@
 HUMON EDITOR
-{{ view Sysys.HumonNodeView nodeContentBinding=node}}
+{{view Sysys.HumonNodeView nodeContentBinding=node}}
+{{! render "detail" node}}
 /HUMON EDITOR
