Initial stab at binding humon editor component actions: pull humon editor component into own file; add  method to call sendAction jsonChanged; add jsonChanged action to application.hbs binding of humon editor component; add jsonChanged actions to IndexRoute

--- a/app/assets/javascripts/templates/components/humon-editor.hbs
+++ b/app/assets/javascripts/templates/components/humon-editor.hbs
@@ -1,4 +1,1 @@
-HUMON EDITOR
-{{view Sysys.HumonNodeView nodeContentBinding=node}}
-{{! render "detail" node}}
-/HUMON EDITOR
+{{view Sysys.HumonNodeView nodeContentBinding=content}}
