--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -8,6 +8,9 @@
 </div>
 </div>
 <hr> Humon Editor Component
+{{humon-editor json=view.json jsonChanged="jsonChanged"}}
+<hr>
+<hr> Humon Editor Component 2
 {{humon-editor json=view.json}}
 <hr>
   {{outlet}}
