--- a/app/assets/javascripts/templates/test.hbs
+++ b/app/assets/javascripts/templates/test.hbs
@@ -1,3 +1,4 @@
 TEST
-{{render "humonRoot" view.content}}
+{{!render "humonRoot" view.content}}
+{{view Sysys.HumonEditorView json=view.json}}
 /TEST
