--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,10 @@
-//= require_tree .
 @import "bootstrap";
 @import "jquery.ui.datepicker";
 @import "jquery.ui.slider";
 @import "font-awesome";
+
+@import "base";
+@import "humon_node";
 //
 // @import "vendor/jquery-ui-1.9.2.custom";
 //# pp/assets/javascripts/vendor/jquery-ui-1.9.2.custom/css/ui-lightness
