pull content editable field (and key editable field) into its own file; update humon_key_index partial to use KeyEditableField; focus in / focus out / hotkeys work

--- a/app/assets/javascripts/templates/_humon_key_index_field.hbs
+++ b/app/assets/javascripts/templates/_humon_key_index_field.hbs
@@ -1,5 +1,5 @@
 {{#if view.nodeContent.nodeParent.isList}}
   {{view "Sysys.IdxField" valueBinding="view.nodeContent.nodeIdx" rawValueBinding="view.nodeContent.nodeIdx"}}
 {{else}}
-  {{view "Sysys.KeyField" rawValueBinding=view.nodeContent.nodeKey}}<span class="colon-glyph">:</span>
+  {{view "Sysys.KeyEditableField" rawValueBinding=view.nodeContent.nodeKey}}<span class="colon-glyph">:</span>
 {{/if}}
