--- a/app/assets/javascripts/templates/acts.hbs
+++ b/app/assets/javascripts/templates/acts.hbs
@@ -1,4 +1,4 @@
-<h2>Recent SherwinActions</h2>
+<h4>Recent:</h4>
 
 <div class="span12">
 <a class="btn" {{action newAct target="controller" href=true}}>New Act</a>
