--- a/app/assets/stylesheets/humon_node_content_editable_field.css.scss
+++ b/app/assets/stylesheets/humon_node_content_editable_field.css.scss
@@ -7,10 +7,33 @@
  */
 
 @import "base";
+.node {
+  padding-left: $nodeWhiteIndent;
+}
 .key-field {
   @include imp;
-  border: 1px solid red;
   display: inline-block;
-  width: 100px;
+  min-width: 20px;
+  max-width: 200px;
   height: 18px;
+}
+
+span.colon-glyph {
+  @include imp;
+  position: relative;
+  vertical-align: top;
+  left: 0px;
+}
+
+span.node-detail.node-icon {
+  @include imp;
+  height: 10px;
+  font-size: 10px;
+  line-height: 10px;
+  width: 10px;
+  i.icon {
+    height: 10px;
+    top: 0%;
+    position: absolute;
+  }
 }
