--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -10,7 +10,7 @@
 <hr> Humon Editor Component
 {{humon-editor json=view.json jsonChanged="jsonChanged"}}
 <hr>
-<hr> Humon Editor Component 2
-{{humon-editor json=view.json}}
-<hr>
+  Test View:
+{{view Sysys.TestView}}
+</hr>
   {{outlet}}
