update content_field#init to reclaim controller and context property

--- a/app/assets/javascripts/templates/test.hbs
+++ b/app/assets/javascripts/templates/test.hbs
@@ -3,5 +3,5 @@ HEV:::
 {{view Sysys.HumonEditorView json=view.json}}
 <hr>
 HNV:::
-{{view Sysys.HumonNodeView nodeContent=view.node}}
+{{! view Sysys.HumonNodeView nodeContent=view.node}}
 /TEST
