--- a/app/assets/javascripts/templates/application.handlebars
+++ b/app/assets/javascripts/templates/application.handlebars
@@ -8,7 +8,7 @@
 </div>
 </div>
 <hr> Humon Editor Component
-{{humon-editor json=view.json jsonChanged="jsonChanged"}}
+{{!humon-editor json=view.json jsonChanged="jsonChanged"}}
 <hr>
   Test View:
 {{view Sysys.TestView}}
