restyling key field and icon; clean up ContentEditableField and subclasses

--- a/app/assets/javascripts/templates/test.hbs
+++ b/app/assets/javascripts/templates/test.hbs
@@ -1,6 +1,6 @@
 TEST
 HEV:::
-{{view Sysys.HumonEditorView json=view.json}}
+{{view Sysys.HumonEditorView jsonBinding=view.json}}
 <hr>
 HNV:::
 {{! view Sysys.HumonNodeView nodeContent=view.node}}
