--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -41,22 +41,24 @@ span.blocky {
   text-decoration: underline;
 }
 .node.active > span.blocky> span.node-detail {
-  font-style: italic;
-  display: inline;
+  visibility: visible;
 }
 span.node-detail {
-  display: none;
+  font-style: italic;
+  visibility: hidden;
   position: relative;
+  display: inline-block;
 }
 span.node-detail.node-icon {
   height: 10px;
+  width: 10px;
   font-size: 10px;
   line-height: 10px;
   i.icon {
     height: 10px;
     top: 0%;
     position: absolute;
-    left: -12px;
+    left: 0px ;// -12px;
   }
 }
 /*
@@ -133,6 +135,12 @@ span.node-detail.node-icon {
     text-align: left;
     padding-right: $fieldWhiteIndent;
   }
+  div.content-field.key-field {
+    display: inline-block;
+    min-width: $keyFieldMinWidth;
+    max-width: $keyFieldMaxWidth;
+    height: $lineheight;
+  }
   textarea.content-field.key-field:focus {
   }
 }
@@ -143,7 +151,7 @@ span.node-detail.node-icon {
 span.colon-glyph {
   position: relative;
   vertical-align: top;
-  left: -10px;
+  left: 0px;
 }
 /*
  * open glyph
@@ -204,4 +212,4 @@ textarea.autogrow-field.content-field {
   padding-bottom: 50px;
 }
 
-@import "humon_node_content_editable_field.css.scss";
+// @import "humon_node_content_editable_field.css.scss";
