--- a/app/assets/javascripts/templates/humon_node_literal.hbs
+++ b/app/assets/javascripts/templates/humon_node_literal.hbs
@@ -4,7 +4,7 @@ humon_node_literal.hbs
 <span class="blocky">
   {{partial humon_key_index_field}}
 
-  {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
+  {{view "Sysys.ValEditableField" rawValueBinding="view.templateStrings.asString" }}
   <span class="node-detail">
   </span>
   <span class="node-detail node-icon">
