set focusField to default focus to right side of field; fix styling for val-field

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -20,6 +20,9 @@ $fieldWhiteIndent: 15px;
 @mixin imp {
   border: 1px solid red;
 }
+@mixin nimp {
+  border: 1px solid transparent;
+}
 
 
 $keyFieldMinWidth: 20px;
