--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,9 +1,12 @@
 $copygray: #555555;
 $grayDark: darken($copygray, 15%);
 $grayDarker: darken($copygray, 30%);
+$grayDarkest: darken($copygray, 40%);
+$grayDarkest1: darken($copygray, 50%);
 $grayLight: lighten($copygray, 15%);
-$grayLighter: lighten($copygray, 30%);
-$grayLightest: lighten($copygray, 45%);
+$grayLighter: lighten($copygray, 28%);
+$grayLightest: lighten($copygray, 35%);
+$grayLightest1: lighten($copygray, 42%);
 
 $activeColor: rgb(72, 137, 255);
 $activeColorDark: darken($activeColor, 30%);
@@ -66,24 +69,37 @@ src: font-url('Univers67CondensedBold.ttf');
 } */
 
 $lineheight: 20px;
+$nodeCopyFontSize: 16px;
 
 $contentFieldMinWidth: 10px;
-$contentFieldMaxWidth: 1000px;
+$contentFieldMaxWidth: 640px;
 
 $keyFieldMinWidth: $contentFieldMinWidth;
-$keyFieldMaxWidth: 200px;
+$keyFieldMaxWidth: 120px;
 
 $valFieldMinWidth: $contentFieldMinWidth;
 $valFieldMaxWidth: $contentFieldMaxWidth;
 
+$idxFieldMinWidth: 5px;
+$idxFieldMaxWidth: 12px;
+
 $borderUnderline: 1px solid $grayLight;
 $borderLightUnderline: 1px dotted $grayLightest;
 
-$nodeActiveBorderLeft: $nodeLeftBorder $activeColorLight solid;
-$nodeBorderLeft: $nodeLeftBorder transparent solid;
+$nodeBorderLeftWidth: 4px;
+$nodeBorderLeft: $nodeBorderLeftWidth transparent solid;
+// $nodeActiveBorderLeft: $nodeLeftBorder $activeColorLight solid;
+$nodeActiveBorderLeft: $nodeBorderLeftWidth lighten($grayLightest1, 6%) solid;
 
 $borderTransparent: 1px solid transparent;
 
 $nodeWhiteIndent: 15px;
 $childNodeGlyphWidth: 8px;
 $childNodeGlyphLeftOffset: $nodeWhiteIndent - $childNodeGlyphWidth - 2px;
+$childNodeGlyphColor: $grayLightest1;
+
+$nodeCopyColor: $copygray;
+$nodeActiveCopyColor: $grayDarkest1;
+
+$nodeIdxCopyColor: lighten($nodeCopyColor, 15%);
+$nodeIdxActiveCopyColor: lighten($nodeActiveCopyColor, 15%);
