updating date and type registrations

--- a/app/assets/stylesheets/humon_node.css.scss
+++ b/app/assets/stylesheets/humon_node.css.scss
@@ -59,7 +59,8 @@ body {
 .node.active > span.blocky> .content-field:empty:before {
   display: none;
 }
-.node.active > span.blocky> span.node-detail {
+.node.active > span.blocky> span.node-detail,
+.node:hover > span.blocky > span.node-detail {
   visibility: visible;
 }
 span.node-detail {
