--- a/app/assets/javascripts/templates/humon_node_date.hbs
+++ b/app/assets/javascripts/templates/humon_node_date.hbs
@@ -4,11 +4,11 @@ humon_node_date.hbs
 <span class="blocky">
   {{partial humon_key_index_field}}
 
+    {{view "Sysys.ValEditableField" rawValueBinding="view.templateStrings.asString" }}
+    ({{ view.templateStrings.relative }})
     <span class="node-detail node-icon">
       {{partial humon_icon}}
     </span>
-    {{view "Sysys.ValField" rawValueBinding="view.templateStrings.asString" }}
-    ({{ view.templateStrings.relative }})
 
     <span class="node-detail">
       {{view.templateStrings.verbose}}
